<resources xmlns:tools="http://schemas.android.com/tools"    tools:ignore="MissingTranslation" >
    <string name="app_name">Jeeran</string>

    <!-- Strings related to Home -->
    <string name="service">Service</string>
    <string name="realestate">Real Estate</string>
    <string name="discussion">Discussion</string>

    <!-- Strings related to My Favorites -->
    <string name="myFavorites">My Favorites</string>


    <string name="user_name" translatable="false">User Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="register_with_fb">Register With Facebook</string>
    <string name="title_activity_register_account" translatable="false">Sign in</string>

    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="mobileNum">Mobile Number</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_confirm_password">Confirm Password </string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register_with_facebook" translatable="false">Register With Facebook</string>
    <string name="create_account">Create Account</string>
    <string name="action_sign_in_fb">Login With Facebook</string>
    <string name="action_forgot_password">Forgot Your Password?!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id" translatable="false">1303282329685203</string>
    <string name="title_activity_add_service">Add Service</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    //for add service
    <string name="logo_pic" translatable="false">Logo Picture </string>
    <string name="optional" translatable="false">(Optional) </string>
    <string name="take_or_choose_pic" translatable="false">Take Or Choose \n 8 Photos</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="category" translatable="false">Category</string>
    <string name="sub_category" translatable="false">Sub Category</string>
    <string name="description">Description</string>
    <string name="location" translatable="false">Location</string>
    <string name="phone">Phone</string>
    <string name="opening_hours" translatable="false">Opening Hours</string>
    <string name="saveBtn">Save</string>

    <string name="action_settings">Settings</string>
    //for tabs and navigation drawer
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>

    <string name="nav_item_home" translatable="false">Home</string>
    <string name="nav_item_friends" translatable="false">Friends</string>
    <string name="nav_item_notifications" translatable="false">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    >

    <!-- Toolbar titles -->
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity" translatable="false">Other Activity</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home" translatable="false">Home</string>
    <string name="nav_drawer_item_explore" translatable="false">Explore</string>
    <string name="nav_drawer_help_and_feedback" translatable="false"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about" translatable="false">About</string>
    <string name="navigation_drawer_opened" translatable="false">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed" translatable="false">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry" translatable="false">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry" translatable="false">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username" translatable="false">Asmaa Ali</string>
    <string name="tools_text_account_information_email" translatable="false">user@mail.com</string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular" translatable="false">Roboto-Regular</string>
    <string name="typeface_roboto_medium" translatable="false">Roboto-Medium</string>
    <string name="title_activity_add_real_estate" translatable="false">AddRealEstate</string>


    //for real estate
    <string name="email_real">Email</string>
    <string name="numOfRooms">Number Of Rooms</string>
    <string name="numOfBathrooms">Number Of Bathrooms</string>
    <string name="area">Area</string>
    <string name="take_or_choose_pic_real" translatable="false">Take Or Choose 8 Photos</string>
    <string name="location_real" translatable="false">Location</string>
    <string name="address_real">Address</string>
    <string name="contact_person_real" translatable="false">Contact Person</string>
    <string name="title_activity_forgot_password" translatable="false">ForgotPasswordActivity</string>

    <!-- strings related to restaurants card view -->
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next" translatable="false">Play Next</string>
    <string name="backdrop_title" translatable="false">LOVE MUSIC</string>
    <string name="backdrop_subtitle" translatable="false">This season top 20 albums</string>

    //for splash screen
    <string name="where_do_you_live" translatable="false">Where do you live </string>
    <string-array name="select_area" translatable="false">
        <item>El Tagammoa El khames</item>
        <item>El Shorouk</item>
        <item>El Rehab City</item>
        <item>Madenty</item>
    </string-array>
    <string name="title_activity_get_location" translatable="false">Map</string>


    // google key
    <string name="title_activity_show_service_location" translatable="false">Map</string>


    //discussion
    <string name="prompt_comment">Add Comment</string>
    <string name="comment_btn" translatable="false"> > </string>

    //report
    <string name="report">Select Report Reason</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="msg">Add Message: (Optional)</string>

    //edit
    <string name="done">Done Editing</string>
    <string name="hint_name" translatable="false">your review</string>
    <string name="gcm_defaultSenderId" translatable="false">550</string>
    <string name="select_area_arrays" translatable="false">djfk</string>
    <string name="google_maps_key1">AIzaSyAdh4bgsf0vghd2WiuLVzSm5Sf9gznRYuo</string>

    <string name="edit_service">edit</string>
    <string name="delete_service">delete</string>
    <string name="report_review">report</string>
    <string name="title_activity_my_service_location">Map</string>

    //add post
    <string name="post">post</string>
    <string name="photo">photo</string>

    //forgot password
    <string name="reset">Reset Password</string>


</resources>
