<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AddService"
    android:orientation="vertical"
    android:background="@color/com_facebook_button_login_silver_background_color"
    >



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:orientation="vertical"
        android:textAlignment="center" >

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" android:onClick="uploadImg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_or_choose_pic_real"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/takephotos_image"
            android:foregroundGravity="center"
            android:paddingLeft="40dp"
            android:id="@+id/preview_addrealestate"
            android:textAlignment="center" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        >

        <LinearLayout

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textAlignment="center" >

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:id="@+id/title_addRealEstateActivity"
            android:inputType="textWebEditText"
            android:textCursorDrawable="@drawable/cursur_color"
            android:cursorVisible="true"/>

    </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type"
                    android:id="@+id/type_addRealEstateActivity"
                    android:inputType="textWebEditText"
                    android:textCursorDrawable="@drawable/cursur_color"
                    android:cursorVisible="true"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:id="@+id/price_addRealEstateActivity"
                    android:inputType="textWebEditText"
                    android:textCursorDrawable="@drawable/cursur_color"
                    android:cursorVisible="true"/>

            </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"

            android:inputType="textWebEmailAddress"
            android:id="@+id/description_addRealEstateActivity"
            android:textCursorDrawable="@drawable/cursur_color" />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_real"

            android:inputType="textWebEmailAddress"
            android:id="@+id/location_addRealEstateActivity"
            android:textCursorDrawable="@drawable/cursur_color" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_real"
            android:editable="false"
            android:inputType="textWebEmailAddress"
            android:id="@+id/address_addRealEstateActivity"
            android:textCursorDrawable="@drawable/cursur_color" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_person_real"

            android:inputType="textWebEmailAddress"
            android:id="@+id/contactPerson_addRealEstateActivity"
            android:textCursorDrawable="@drawable/cursur_color" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:id="@+id/phone_addRealEstateActivity"
            android:inputType="textWebEmailAddress"
            android:textCursorDrawable="@drawable/cursur_color" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_real"
            android:id="@+id/email_addRealEstateActivity"
            android:inputType="textWebEmailAddress"
            android:textCursorDrawable="@drawable/cursur_color" />
    </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numOfRooms"
                    android:id="@+id/numOfRomms_addRealEstateActivity"
                    android:inputType="textWebEmailAddress"
                    android:textCursorDrawable="@drawable/cursur_color" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numOfBathrooms"
                    android:id="@+id/numOfBatreooms_addRealEstateActivity"
                    android:inputType="textWebEmailAddress"
                    android:textCursorDrawable="@drawable/cursur_color" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area"
                    android:id="@+id/area_addRealEstateActivity"
                    android:inputType="textWebEmailAddress"
                    android:textCursorDrawable="@drawable/cursur_color" />
            </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:text="@string/saveBtn"
        android:id="@+id/saveBtn_addRealEstateActivity"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_gravity="center"/>
            </LinearLayout>
    </ScrollView>
</LinearLayout>

