<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/report"
        android:id="@+id/title" />


    <RadioGroup
        android:id="@+id/radioReasoons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/complaintMsg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:clickable="true"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/ok"
            android:textColor="@color/primary_700"
            android:id="@+id/okTxt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:clickable="true"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cancel"
            android:textColor="@color/primary_700"
            android:id="@+id/cancelTxt" />

    </LinearLayout>

</LinearLayout>