<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AddService"
    android:orientation="vertical"
    android:background="@color/com_facebook_button_login_silver_background_color"
    android:layout_weight="6">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textAlignment="center" >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_image"
            android:textAlignment="center"
            android:layout_weight="
        .5"
            >

        </ImageView>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/takephotos_image"
            android:textAlignment="center" android:layout_weight=".5"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_pic"
            android:textAlignment="center"
            android:layout_weight=".5" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/com_facebook_button_login_silver_background_color"
            android:textAlignment="center"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_or_choose_pic"
            android:textAlignment="center"
            android:layout_weight=".5" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textAlignment="center" >

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:id="@+id/title_addServiceContentActivity"
            android:inputType="textWebEditText"
            android:textCursorDrawable="@drawable/cursur_color"
            android:cursorVisible="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/category_addServiceContentActivity"
            android:textCursorDrawable="@drawable/cursur_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:textColorHint="@color/colorPrimary"
            app:met_floatingLabel="normal" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/subCategory_addServiceContentActivity"
            android:textCursorDrawable="@drawable/cursur_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_category"

            android:textColorHint="@color/colorPrimary"
            app:met_floatingLabel="normal" />


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"

            android:inputType="textWebEmailAddress"
            android:id="@+id/description_addContentServiceActivity"
            android:textCursorDrawable="@drawable/cursur_color" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:id="@+id/phone_addContentServiceActivity"
            android:inputType="textWebEmailAddress"
            android:textCursorDrawable="@drawable/cursur_color" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/opening_hours"
            android:id="@+id/openingHours_addContentServiceActivity"
            android:inputType="textWebEmailAddress"
            android:textCursorDrawable="@drawable/cursur_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/registerWithFbBtn"
        android:text="@string/saveBtn"
        android:id="@+id/aveBtn_addContentServiceActivity"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

</LinearLayout>
